Use TranslateManager::GetTargetLanguage() for context menu

BUG=632545

Review-Url: https://codereview.chromium.org/2189283002
Cr-Commit-Position: refs/heads/master@{#408587}

Former-commit-id: 9939a671897e4500ecb8fa83ec43ca497a8ab161